--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <div class="row justify-content-between align-items-center">
                     <div class="brand-name">
-                        <a href="index.html">Jacksprojects</a>
+                        <a href="index.html">Jacksprojects <i class="fas fa-project-diagram"></i></a>
                     </div>
                     <div class="nav-toggle">
                         <span></span>
@@ -48,8 +48,8 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="home-content">
-                        <h4>Welcome</h4>
-                        <h1>Jacksprojects</h1>
+                        <h1>Welcome</h4>
+                        <h1><i class="fab fa-r-project"></i> <i class="fab fa-python"></i> <i class="fab fa-linux"></i></h1>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                                     <h5>Data Visualisation</h5>
                                 </div>
                                 <div class="stat-box">
-                                    <h2><i class="fa fa-file-excel-o"></i></h2>
+                                    <h2><i class="fas fa-broom"></i></h2>
                                     <h5>Data Cleaning and Munging</h5>
                                 </div>
                                 <div class="stat-box">
@@ -167,9 +167,7 @@
                                         <div class="service-item-inner">
                                             <img src="img/service/shiny.png" alt="service">
                                             <div class="overlay">
-                                                <a href="https://jacksprojects.shinyapps.io/covid">
-                                                    <h4>Interactive and Data Driven Web Applications</h4>
-                                                </a>
+                                                <h4><a href="https://jacksprojects.shinyapps.io/covid">Interactive and Data Driven Web Applications</a></h4>
                                             </div>
                                         </div>
                                     </div>
@@ -204,76 +202,64 @@
                 <div class="row">
                     <!-- work item start -->
                     <div class="work-item">
-                        <a href="https://jacksprojects.github.io/Pages/maps.html">
                         <div class="work-item-inner">
-                                <img src="img/work/map.jpg" alt="">
-                                <div class="overlay">
-                                    <h4>Integrating Interactive Maps with R</h4>
-                                </div>
+                            <img src="img/work/map.jpg" alt="">
+                            <div class="overlay">
+                                <h4><a href="https://jacksprojects.github.io/Pages/maps.html">Integrating Interactive Maps with R</a></h4>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <!-- work item end -->
                     <!-- work item start -->
                     <div class="work-item">
-                        <a href="https://jacksprojects.github.io/Pages/datascraping.html">
                         <div class="work-item-inner">
-                                <img src="img/work/news.jpg" alt="">
-                                <div class="overlay">
-                                    <h4>Data Scraping with R</h4>
-                                </div>
+                            <img src="img/work/news.jpg" alt="">
+                            <div class="overlay">
+                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">Data Scraping with R</a></h4>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <!-- work item end -->
-                   <!-- work item start -->
-                   <div class="work-item">
-                    <a href="https://jacksprojects.github.io/Pages/3DMaps.html">
-                    <div class="work-item-inner">
+                    <!-- work item start -->
+                    <div class="work-item">
+                        <div class="work-item-inner">
                             <img src="img/work/canyon.jpg" alt="">
                             <div class="overlay">
-                                <h4>How to make 3D Maps with Raytracing using rayrender</h4>
+                                <h4><a href="https://jacksprojects.github.io/Pages/3DMaps.html">How to make 3D Maps with Raytracing using rayrender</a></h4>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <!-- work item end -->
-                <!-- work item start -->
-                <div class="work-item">
-                    <a href="https://jacksprojects.github.io/Pages/datascraping.html">
-                    <div class="work-item-inner">
+                    </div>
+                    <!-- work item end -->
+                    <!-- work item start -->
+                    <div class="work-item">
+                        <div class="work-item-inner">
                             <img src="img/work/report.jpg" alt="">
                             <div class="overlay">
-                                    <h4>Automating report generation with RMarkdown and Gmail</h4>
+                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">Automating report generation with RMarkdown and Gmail</a></h4>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <!-- work item end -->
-                <!-- work item start -->
-                <div class="work-item">
-                    <a href="https://jacksprojects.github.io/Pages/datascraping.html">
-                    <div class="work-item-inner">
-                        <img src="img/work/listen.jpg" alt="">
-                        <div class="overlay">
-                                <h4>How to make a live document translator with Python</h4>
+                    </div>
+                    <!-- work item end -->
+                    <!-- work item start -->
+                    <div class="work-item">
+                        <div class="work-item-inner">
+                            <img src="img/work/listen.jpg" alt="">
+                            <div class="overlay">
+                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">How to make a live document translator with Python</a></h4>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <!-- work item end -->
-                <!-- work item start -->
-                <div class="work-item">
-                    <a href="https://jacksprojects.github.io/Pages/datascraping.html">
-                    <div class="work-item-inner">
-                        <img src="img/work/robot.jpg" alt="">
-                        <div class="overlay">
-                                <h4>Document scanner with optical image stabilisation using OpenCV3</h4>
+                    </div>
+                    <!-- work item end -->
+                    <!-- work item start -->
+                    <div class="work-item">
+                        <div class="work-item-inner">
+                            <img src="img/work/robot.jpg" alt="">
+                            <div class="overlay">
+                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">Document scanner with optical image stabilisation using OpenCV3</a></h4>
                             </div>
                         </div>
-                    </a>
-                </div>
-                <!-- work item end -->
+                    </div>
+                    <!-- work item end -->
                 </div>
             </div>
         </section>
@@ -294,49 +280,28 @@
                 <div class="row">
                     <div class="contact-form">
                         <form class="form" id = "form">
-                            <p id="returnmessage"></p>
                             <div class="row">
-                                <div class="left input-group">
-                                    <label>Name</label>
-                                    <input type="text" id="name" class="input-control" placeholder="Your Name">
+                                <div class="contact-info">
+                                    <div class="row">
+                                        <!--Info item start-->
+                                        <div class="info-item">
+                                            <h5>Email</h5>
+                                            <p>jack.alt@protonmail.com</p>
+                                        </div>
+                                        <!--Info item end-->
+                                    </div>
                                 </div>
-                                <div class="right input-group">
-                                    <label>Email</label>
-                                    <input type="text" id="email" class="input-control" placeholder="Your Email Address">
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-group">
-                                    <label>Message</label>
-                                    <textarea class="input-control" id="message" placeholder="Your Message"></textarea>
-                                </div>
-                            </div>
-                            <div class="form-btn">
-                                <button type="button" id="submit" class="btn btn-01">Send</button>
                             </div>
                         </form>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="contact-info">
-                        <div class="row">
-                            <!--Info item start-->
-                            <div class="info-item">
-                                <h5>Email</h5>
-                                <p>jack.alt@protonmail.com</p>
-                            </div>
-                            <!--Info item end-->
-                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!--Contact section end-->
         <!--Copyright text-->
-        <p class="copyright">&copy; 2020 jacksprojects</p>
+        <p class="copyright">&copy; 2021 jacksprojects</p>
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/main.js"></script>
-<script src="js/contact_form.js"></script>
-
+<script src="https://kit.fontawesome.com/0cc76ded67.js" crossorigin="anonymous"></script>
 </html>
