--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                         <div class="service-item-inner">
                                             <img src="img/service/shiny.png" alt="service">
                                             <div class="overlay">
-                                                <h4><a href="https://jacksprojects.shinyapps.io/covid">Interactive and Data Driven Web Applications</a></h4>
+                                                <h4><a href="">Interactive and Data Driven Web Applications</a></h4>
                                             </div>
                                         </div>
                                     </div>
@@ -245,7 +245,7 @@
                         <div class="work-item-inner">
                             <img src="img/work/listen.jpg" alt="">
                             <div class="overlay">
-                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">How to make a live document translator with Python</a></h4>
+                                <h4><a href="https://jacksprojects.shinyapps.io/covid">COVID-19 Live data tracking and analysis</a></h4>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                         <div class="work-item-inner">
                             <img src="img/work/robot.jpg" alt="">
                             <div class="overlay">
-                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">Document scanner with optical image stabilisation using OpenCV3</a></h4>
+                                <h4><a href="https://jacksprojects.github.io/Pages/Gitbook/model-based-prediction.html">Analysis Gitbook: Notes on model based prediction</a></h4>
                             </div>
                         </div>
                     </div>
