Added email report and example

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                         <div class="work-item-inner">
                             <img src="img/work/report.jpg" alt="">
                             <div class="overlay">
-                                <h4><a href="https://jacksprojects.github.io/Pages/datascraping.html">Automating report generation with RMarkdown and Gmail</a></h4>
+                                <h4><a href="https://jacksprojects.github.io/Pages/email.html">Automating report generation with RMarkdown and Gmail</a></h4>
                             </div>
                         </div>
                     </div>
