--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             </div>
                         </div>
                         <p>
-                            Hi I'm Jack! I'm an IT Consultant, data analyst and web developer from Sydney Australia with an undergraduate degree in nanotechnology. My experience includes automating data pipelines, deploying data-driven web applications, full-stack web development and both qualitative and quantitative data analytics.
+                            Hi I'm Jack! I'm an IT Consultant, data analyst and web developer from Sydney Australia. My experience includes automating data pipelines, deploying data-driven web applications, full-stack web development and both qualitative and quantitative data analytics.
                         </p>
                         <div class="stats">
                             <div class="row">
